--- a/public/scss/0-base/_variables.scss
+++ b/public/scss/0-base/_variables.scss
@@ -4,7 +4,7 @@
 //--- All Variables - Related Stuff Included In This Area ---↓
 // project specific variables
 $theme-color--default: #484848;
-$default-color:        #000000; 
+$default-color:        #000000;
 
 // Color
 $primary-color:     #E72463;
@@ -36,5 +36,5 @@ $vimeo:     #86c9ef;
 
 // Font Family
 $body-font-family-name: 'Poppins', sans-serif;
-$different-font-style-2: 'Great Vibes', cursive;
+$different-font-style-2: 'Lobster', cursive;
 $different-font-style: 'Josefin Slab', serif;
