updated header and footer

--- a/public/scss/0-base/_variables.scss
+++ b/public/scss/0-base/_variables.scss
@@ -35,6 +35,6 @@ $youtube:   #c4302b;
 $vimeo:     #86c9ef;
 
 // Font Family
-$body-font-family-name: 'Poppins', sans-serif;
+$body-font-family-name: 'Roboto', sans-serif;
 $different-font-style-2: 'Lobster', cursive;
 $different-font-style: 'Josefin Slab', serif;
