--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,14 +45,12 @@
 /*    01 - Global - Default
 /*----------------------------------------*/
 /*-- Google Font --*/
-@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,300;0,400;0,600;0,700;1,100;1,300;1,400;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster+Roboto&display=swap");
 body {
   line-height: 1.6;
   font-weight: 400;
   color: #484848;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   scroll-behavior: smooth;
   font-size: 14px;
 }
@@ -63,11 +61,10 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   color: #000000;
   font-weight: 500;
-  margin-top: 0px;
-  font-weight: 400;
+  margin-top: 0;
   line-height: 1;
 }
 
@@ -244,9 +241,9 @@ button,
 
 hr {
   margin: 60px 0;
-  padding: 0px;
+  padding: 0;
   border-bottom: 1px solid #eceff8;
-  border-top: 0px;
+  border-top: 0;
 }
 
 .mark,
@@ -342,7 +339,7 @@ mark {
 
 .preloader {
   display: inline-block;
-  padding: 0px;
+  padding: 0;
   text-align: left;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -394,8 +391,8 @@ mark {
   width: 50px;
   height: 50px;
   border-color: #E72463;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   -webkit-animation: scale-2 .8s linear 0s infinite;
           animation: scale-2 .8s linear 0s infinite;
 }
@@ -419,7 +416,7 @@ mark {
 }
 
 .spinners .spinner-block:nth-child(5n) {
-  margin-right: 0px;
+  margin-right: 0;
 }
 
 .spinner {
@@ -464,7 +461,7 @@ mark {
   font-size: 36px;
   font-family: "Josefin Slab", serif;
   font-weight: 700;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   padding-bottom: 25px;
   text-transform: uppercase;
 }
@@ -492,7 +489,7 @@ mark {
 
 .section-title .section-title-2 {
   font-size: 28px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   color: #010101;
   margin-bottom: 15px;
   text-transform: uppercase;
@@ -737,7 +734,7 @@ mark {
 
 .countdown-wrapper .single-countdown .single-countdown_time {
   font-size: 40px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   font-weight: 400;
   line-height: 40px;
   color: #555555;
@@ -760,7 +757,7 @@ mark {
 .countdown-wrapper .single-countdown .single-countdown_text {
   font-size: 14px;
   line-height: 16px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   font-weight: 400;
   color: #999999;
 }
@@ -804,7 +801,7 @@ mark {
 
 .countdown-style-2 .single-countdown .single-countdown_time {
   font-size: 14px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   font-weight: 500;
   line-height: 16px;
   color: #000000;
@@ -814,7 +811,7 @@ mark {
 .countdown-style-2 .single-countdown .single-countdown_text {
   font-size: 14px;
   line-height: 16px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   font-weight: 500;
   color: #000000;
 }
@@ -1099,7 +1096,7 @@ mark {
   padding: 0;
   margin: 0;
   height: auto;
-  line-height: auto;
+  /*line-height: auto;*/
 }
 
 .myniceselect.nice-select span {
@@ -1120,7 +1117,7 @@ mark {
 /*--- Swiper Pagination Style ---*/
 .swiper-pagination.default-pagination {
   position: relative;
-  bottom: 0px;
+  bottom: 0;
   line-height: 14px;
 }
 
@@ -1133,7 +1130,7 @@ mark {
   -webkit-transition: .3s;
   -o-transition: .3s;
   transition: .3s;
-  outline: 0px;
+  outline: 0;
 }
 
 .swiper-pagination.default-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
@@ -1173,8 +1170,8 @@ mark {
 }
 
 .intro11-carousel-wrap .swiper-button-prev:focus, .intro11-carousel-wrap .swiper-button-next:focus {
-  border: 0px;
-  outline: 0px;
+  border: 0;
+  outline: 0;
 }
 
 .intro11-carousel-wrap .swiper-button-prev:after, .intro11-carousel-wrap .swiper-button-next:after {
@@ -1238,12 +1235,12 @@ mark {
 }
 
 .intro11-carousel-wrap.arrow-style-2 .swiper-button-next {
-  right: 0px;
+  right: 0;
 }
 
 @media (max-width: 1199px) {
   .intro11-carousel-wrap.arrow-style-2 .swiper-button-next {
-    right: 0px;
+    right: 0;
   }
 }
 
@@ -1263,14 +1260,14 @@ mark {
 
 @media (max-width: 767px) {
   .intro11-carousel-wrap.arrow-style-3 .swiper-button-next {
-    right: 0px;
+    right: 0;
   }
 }
 
 /* ---Bootstrap No Gutters--- */
 .no-gutters {
-  margin-right: 0px;
-  margin-left: 0px;
+  margin-right: 0;
+  margin-left: 0;
 }
 
 /* ---Tooltip--- */
@@ -1686,8 +1683,8 @@ mark {
   left: 0;
   position: fixed;
   background-color: #ffffff;
-  -webkit-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
   right: 0;
   top: 0;
   -webkit-transition: .3s;
@@ -1718,10 +1715,10 @@ mark {
 .main-nav > ul > li > a {
   display: block;
   padding: 8px 16px;
-  font-size: 15px;
+  font-size: 17px;
   text-transform: capitalize;
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
+  font-family: 'Roboto', sans-serif;;
+  font-weight: 300;
   line-height: 18px;
   color: #000000;
 }
@@ -1735,7 +1732,7 @@ mark {
 }
 
 .main-nav > ul > li > a i {
-  margin-left: 0px;
+  margin-left: 0;
   font-size: 15px;
   vertical-align: middle;
 }
@@ -1749,8 +1746,8 @@ mark {
   background: #ffffff;
   padding: 20px 0 24px;
   width: 230px;
-  -webkit-box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
   border-bottom: 3px solid #E72463;
 }
 
@@ -1765,7 +1762,7 @@ mark {
       -ms-flex-pack: justify;
           justify-content: space-between;
   text-transform: capitalize;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   line-height: 18px;
   position: relative;
   color: #000000;
@@ -1824,8 +1821,8 @@ mark {
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
   padding: 20px 0;
-  -webkit-box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
   border-bottom: 3px solid #E72463;
 }
 
@@ -1844,10 +1841,10 @@ mark {
 .mega-menu .menu-colum ul li .mega-menu-text {
   position: relative;
   font-size: 18px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   display: table-caption;
-  padding: 0px 20px 0px 0px;
-  margin: 0px 0px 10px 20px;
+  padding: 0 20px 0 0;
+  margin: 0 0 10px 20px;
 }
 
 .mega-menu .menu-colum ul li .mega-menu-text:after {
@@ -1864,7 +1861,7 @@ mark {
 .mega-menu .menu-colum ul li a {
   padding: 10px 20px;
   display: block;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   line-height: 20px;
   color: #000000;
   font-size: 14px;
@@ -1882,8 +1879,8 @@ mark {
 /*--- Header Right Area ---*/
 .dropdown-search {
   width: 340px;
-  -webkit-box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
   background-color: #ffffff;
 }
 
@@ -1897,7 +1894,7 @@ mark {
   width: 100%;
   display: block;
   padding: 10px 30px 10px 10px;
-  border: 0px;
+  border: 0;
 }
 
 .dropdown-search form button {
@@ -1964,8 +1961,8 @@ mark {
 }
 
 .header-right-area.main-nav > ul > li > span:first-child {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 .header-right-area.main-nav > ul > li > span:first-child:before {
@@ -1973,7 +1970,7 @@ mark {
 }
 
 .header-right-area.main-nav > ul > li > a {
-  padding: 8px 0px 7px;
+  padding: 8px 0 7px;
 }
 
 .header-right-area.main-nav > ul > li > a > i {
@@ -2034,8 +2031,8 @@ mark {
 .header-right-area .cart-item-wrapper {
   padding: 25px 20px;
   width: 350px;
-  -webkit-box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
   background-color: #ffffff;
 }
 
@@ -2078,7 +2075,7 @@ mark {
   font-weight: 600;
   margin-top: 0;
   margin-bottom: 8px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
 }
 
 .header-right-area .cart-item-wrapper .single-cart-item .cart-text .cart-text-btn {
@@ -2346,7 +2343,7 @@ mark {
 }
 
 .top-info-wrap {
-  bottom: 0px;
+  bottom: 0;
   margin-top: auto;
   padding-bottom: 40px;
 }
@@ -2365,7 +2362,7 @@ mark {
 }
 
 .offcanvas-widget-area {
-  padding: 0px 40px 20px;
+  padding: 0 40px 20px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -2404,7 +2401,7 @@ mark {
 
 .offcanvas-widget-area .switcher {
   border-top: 1px solid #e5e5e5;
-  margin-top: 0px;
+  margin-top: 0;
   padding-top: 30px;
   margin-bottom: 40px;
 }
@@ -2480,7 +2477,7 @@ mark {
 .offcanvas-widget-area .switcher-dropdown > li {
   list-style: none;
   display: block;
-  border-bottom: 0 10px;
+  border-bottom: 10px;
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
 }
@@ -2506,7 +2503,7 @@ mark {
 -----------------------------*/
 .search-box-offcanvas {
   margin-bottom: 10px;
-  padding: 20px 40px 0px 40px;
+  padding: 20px 40px 0 40px;
 }
 
 @media (max-width: 479px) {
@@ -2559,7 +2556,7 @@ mark {
 .mobile-menu-btn .off-canvas-btn {
   font-size: 22px;
   cursor: pointer;
-  padding: 0px 12px;
+  padding: 0 12px;
   line-height: 1;
   padding-right: 0;
   -webkit-transition: 0.4s;
@@ -2677,13 +2674,13 @@ mark {
 
 @media (max-width: 991px) {
   .footer-area .footer-widget-area {
-    padding: 60px 0px 50px 0;
+    padding: 60px 0 50px 0;
   }
 }
 
 @media (max-width: 767px) {
   .footer-area .footer-widget-area {
-    padding: 60px 0px 37px 0;
+    padding: 60px 0 37px 0;
   }
 }
 
@@ -2730,7 +2727,7 @@ mark {
 .footer-area .single-footer-widget .widget-list {
   color: #ffffff;
   list-style: none;
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .footer-area .single-footer-widget .widget-list li {
@@ -2759,7 +2756,7 @@ mark {
 
 .footer-area .footer-copyright-area {
   background-color: #000000;
-  padding: 20px 0px;
+  padding: 20px 0;
 }
 
 .footer-area .footer-copyright-area .copyright-content {
@@ -2767,7 +2764,7 @@ mark {
 }
 
 .footer-area .footer-copyright-area .copyright-content p {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .footer-area .footer-copyright-area .copyright-content a {
@@ -2899,8 +2896,8 @@ mark {
   position: relative;
   border: 1px solid #dddddd;
   display: inline-block;
-  margin: 0 0px 0px 20px;
-  border-radius: 0px;
+  margin: 0 0 0 20px;
+  border-radius: 0;
 }
 
 .sidebar-list .btn:focus {
@@ -2968,7 +2965,7 @@ mark {
   font-weight: 600;
   display: inline-block;
   margin-bottom: 3px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
 }
 
 .sidebar-product .product-content .title-2:hover {
@@ -3075,7 +3072,7 @@ mark {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  border-radius: 0px;
+  border-radius: 0;
   position: relative;
   padding: 0 20px;
 }
@@ -3120,7 +3117,7 @@ mark {
 }
 
 .shop_toolbar_wrapper .shop_toolbar_btn button:last-child {
-  margin-right: 0px;
+  margin-right: 0;
 }
 
 .toolbar-bottom {
@@ -3142,7 +3139,7 @@ mark {
 
 @media (max-width: 991px) {
   .toolbar-bottom {
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
 }
 
@@ -3212,7 +3209,7 @@ mark {
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding: 0px 0px 20px;
+    padding: 0 0 20px;
   }
 }
 
@@ -3252,7 +3249,7 @@ mark {
       -ms-flex-preferred-size: 65%;
           flex-basis: 65%;
   max-width: 65%;
-  padding: 0 30px 0px;
+  padding: 0 30px 0;
   position: relative;
   margin-bottom: 0;
 }
@@ -3365,7 +3362,6 @@ mark {
   width: 45px;
   line-height: 45px;
   align-items: center;
-  text-align: center;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -3451,8 +3447,8 @@ mark {
 }
 
 .single-blog:hover {
-  -webkit-box-shadow: 0px 10px 30px 0px rgba(209, 209, 209, 0.5);
-          box-shadow: 0px 10px 30px 0px rgba(209, 209, 209, 0.5);
+  -webkit-box-shadow: 0 10px 30px 0 rgba(209, 209, 209, 0.5);
+          box-shadow: 0 10px 30px 0 rgba(209, 209, 209, 0.5);
 }
 
 .single-blog .blog-content {
@@ -3852,9 +3848,9 @@ mark {
   color: #ffffff;
   background-color: #000000;
   font-size: 18px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   border-color: #000000;
-  border-radius: 0px;
+  border-radius: 0;
 }
 
 @media (max-width: 991px) {
@@ -4075,13 +4071,13 @@ mark {
 
 .product-details-img .single-product-thumb .swiper-slide-thumb-active img {
   cursor: pointer;
-  border: 0px;
+  border: 0;
   border: 1px solid #eceff8;
 }
 
 .product-details-img .single-product-thumb .swiper-button-prev:focus, .product-details-img .single-product-thumb .swiper-button-next:focus {
-  border: 0px;
-  outline: 0px;
+  border: 0;
+  outline: 0;
 }
 
 .product-details-img .single-product-thumb .swiper-button-prev:after, .product-details-img .single-product-thumb .swiper-button-next:after {
@@ -4994,7 +4990,7 @@ mark {
 }
 
 .payment-method .payment-accordion .card-body p {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .payment-method .payment-accordion .panel.panel-default {
@@ -5179,12 +5175,12 @@ mark {
 /*----------------------------------------*/
 /* faq page css here */
 .faq_content_area {
-  padding: 0px 0 65px;
+  padding: 0 0 65px;
 }
 
 @media (max-width: 991px) {
   .faq_content_area {
-    padding: 0px 0 53px;
+    padding: 0 0 53px;
   }
 }
 
@@ -5350,7 +5346,7 @@ mark {
 
 .about-area .section-title-wrap .title {
   font-size: 42px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   font-weight: 700;
   line-height: 1.2;
   color: #000000;
@@ -5548,8 +5544,8 @@ mark {
 }
 
 .intro11-slider-wrap .swiper-button-prev:focus, .intro11-slider-wrap .swiper-button-next:focus {
-  border: 0px;
-  outline: 0px;
+  border: 0;
+  outline: 0;
 }
 
 .intro11-slider-wrap .swiper-button-prev:after, .intro11-slider-wrap .swiper-button-next:after {
@@ -5812,7 +5808,7 @@ mark {
   .intro11-slider .intro11-content-2 .different-title {
     font-size: 40px;
     line-height: 30px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
 }
 
@@ -6053,7 +6049,7 @@ mark {
   display: inline-block;
   font-size: 15px;
   font-weight: 500;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   height: 45px;
   letter-spacing: 0.025em;
   line-height: 45px;
@@ -6384,8 +6380,8 @@ mark {
 }
 
 .categories-img > a:hover {
-  -webkit-box-shadow: 0px 10px 30px 0px #d3d3d3;
-          box-shadow: 0px 10px 30px 0px #d3d3d3;
+  -webkit-box-shadow: 0 10px 30px 0 #d3d3d3;
+          box-shadow: 0 10px 30px 0 #d3d3d3;
 }
 
 .categories-img:hover .categories-content {
@@ -6462,7 +6458,7 @@ mark {
   top: 30px;
   left: 30px;
   background: #000000;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   font-weight: 500;
   font-size: 12px;
   height: 20px;
@@ -6529,7 +6525,7 @@ mark {
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
-  bottom: 0px;
+  bottom: 0;
   -webkit-transition-delay: 300ms;
        -o-transition-delay: 300ms;
           transition-delay: 300ms;
@@ -6579,7 +6575,7 @@ mark {
 }
 
 .product-area .single-product .add-action a:last-child {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .product-area .single-product:hover {
@@ -6735,7 +6731,7 @@ mark {
   .history-area-content > p {
     font-size: 14px;
     line-height: 24px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
 }
 
@@ -6800,7 +6796,7 @@ mark {
 
 .product-countdown-area.product-countdown-style {
   padding: 80px 0;
-  margin: 0px;
+  margin: 0;
 }
 
 @media (max-width: 575px) {
@@ -6810,7 +6806,7 @@ mark {
 }
 
 .product-countdown-area.product-countdown-style .item-carousel-2 {
-  margin-bottom: 0px;
+  margin-bottom: 0;
   width: 100%;
 }
 
@@ -6896,8 +6892,8 @@ mark {
 
 .testimonial-img img {
   border-radius: 50%;
-  -webkit-box-shadow: 0px 4px 10px 2px rgba(188, 188, 188, 0.7);
-          box-shadow: 0px 4px 10px 2px rgba(188, 188, 188, 0.7);
+  -webkit-box-shadow: 0 4px 10px 2px rgba(188, 188, 188, 0.7);
+          box-shadow: 0 4px 10px 2px rgba(188, 188, 188, 0.7);
   width: 150px;
   height: 150px;
 }
@@ -6984,7 +6980,7 @@ mark {
 }
 
 .testimonial-area-2 .single-testimonial {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 @media (max-width: 991px) {
@@ -7075,11 +7071,11 @@ mark {
   padding: 0 10px;
   position: relative;
   text-align: left;
-  border-radius: 0px;
+  border-radius: 0;
 }
 
 .mc-form input:focus {
-  outline: 0px;
+  outline: 0;
   -webkit-box-shadow: none;
           box-shadow: none;
   border-color: #dddddd;
@@ -7116,8 +7112,8 @@ mark {
 }
 
 .mc-form button:focus {
-  outline: 0px;
-  border: 0px;
+  outline: 0;
+  border: 0;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
@@ -7245,7 +7241,7 @@ mark {
 .breadcrumbs-area .breadcrumb-content ul li a {
   font-size: 18px;
   color: #000000;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Roboto', sans-serif;;
   font-weight: 400;
   line-height: 1;
 }
@@ -7269,12 +7265,12 @@ mark {
 
 @media (max-width: 767px) {
   .breadcrumbs-area {
-    padding: 50px 0px;
+    padding: 50px 0;
   }
 }
 
 .modal-open {
-  padding-right: 0px !important;
+  padding-right: 0 !important;
 }
 
 .modal-open .flosun-modal .modal-dialog {
@@ -7372,7 +7368,7 @@ mark {
   border-right: 1px solid #e5e5e5;
   border-bottom: 1px solid #e5e5e5;
   margin-top: 2px;
-  border-radius: 0px;
+  border-radius: 0;
 }
 
 .modal-open .modal-product .nice-select:focus {
