Updated product show page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7447,3 +7447,8 @@ mark {
     max-height: 400px;
     overflow-y: scroll;
 }
+.active-btn {
+    background: #E72463 !important;
+    color: #ffffff !important;
+    border-color: #E72463 !important;
+}
