Added shop page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7452,3 +7452,6 @@ mark {
     color: #ffffff !important;
     border-color: #E72463 !important;
 }
+.text-pink {
+    color: #E72463 !important;
+}
