--- a/public/css/style.css
+++ b/public/css/style.css
@@ -618,7 +618,7 @@ mark {
   border: none;
   width: 92%;
   margin: 0 auto;
-  margin-bottom: 22px;
+  /*margin-bottom: 0;*/
 }
 
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
@@ -2786,7 +2786,7 @@ mark {
   line-height: 1;
   position: relative;
   padding-bottom: 12px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   font-family: 'Roboto', sans-serif;;
 }
 
@@ -2857,7 +2857,7 @@ mark {
 }
 
 .shop-main-area .sidebar_widget .widget_inner .widget-list .sidebar-body .checkbox-container li, .blog-main-area .sidebar_widget .widget_inner .widget-list .sidebar-body .checkbox-container li {
-  padding: 10px 0;
+  padding: 5px 0;
 }
 
 .shop-main-area .sidebar_widget .widget_inner .widget-list .sidebar-body .checkbox-container .custom-control-input, .blog-main-area .sidebar_widget .widget_inner .widget-list .sidebar-body .checkbox-container .custom-control-input {
