--- a/public/scss/3-pages/_cart.scss
+++ b/public/scss/3-pages/_cart.scss
@@ -66,7 +66,7 @@
 .cart-update-option {
 	border: 1px solid $border-color-3;
 	margin-top: 15px;
-	padding: 15px 20px;;
+	padding: 15px 20px;
 	align-items: center;
     justify-content: space-between;
     @include breakpoint(max-xl_device){
