--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4806,6 +4806,7 @@ mark {
 
 .checkbox-form .checkout-form-list input[type="text"],
 .checkbox-form .checkout-form-list input[type="password"],
+.checkbox-form .checkout-form-list input[type="number"],
 .checkbox-form .checkout-form-list input[type="email"] {
     background: #ffffff;
     border: 1px solid #dddddd;
