--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7412,12 +7412,10 @@ mark {
 }
 
 .custom-checkbox-image {
-    border: 1px solid #e1e1e1;
     line-height: 0;
     padding: 0;
     margin-bottom: 10px;
     color: #1b1b1c;
-    border-radius: 25px;
     position: unset;
     font-weight: 500;
 }
@@ -7492,4 +7490,9 @@ nav li:hover > .dropdown-submenu-v2, nav li:hover > .dropdown-submenu {
     transform: rotateX(0deg);
     visibility: visible;
     opacity: 1;
+}
+.custom-checkbox-image input[type="checkbox"] + label {
+    border: 2px solid #e1e1e1;
+    border-radius: 25px;
+    padding: 0;
 }
