--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1974,7 +1974,7 @@ mark {
 .header-right-area.main-nav > ul > li > a > i {
     font-size: 18px;
     line-height: 1;
-    color: #000000;
+    color: #ffffff;
 }
 
 .header-right-area.main-nav > ul > li > a > i:hover {
@@ -2000,7 +2000,7 @@ mark {
 .header-right-area.main-nav > ul > li.minicart-wrap .minicart-btn i {
     font-size: 18px;
     line-height: 1;
-    color: #000000;
+    color: #ffffff;
 }
 
 .header-right-area.main-nav > ul > li.minicart-wrap .minicart-btn i:hover {
