--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4805,6 +4805,8 @@ mark {
 }
 
 .checkbox-form .checkout-form-list input[type="text"],
+.checkbox-form .checkout-form-list input[type="time"],
+.checkbox-form .checkout-form-list input[type="date"],
 .checkbox-form .checkout-form-list input[type="password"],
 .checkbox-form .checkout-form-list input[type="number"],
 .checkbox-form .checkout-form-list input[type="email"] {
