--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7603,6 +7603,10 @@ nav li:hover > .dropdown-submenu-v2, nav li:hover > .dropdown-submenu {
 /*        display: block !important;*/
 /*    }*/
 /*}*/
-.product-image img {
-    height: 300px;
+.product-area .single-product .product-image img {
+    height: auto;
+}
+
+.product-area .single-product .product-image {
+    max-height: 36rem;
 }
