Updated register page and added profile page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7703,3 +7703,7 @@ nav li:hover > .dropdown-submenu-v2, nav li:hover > .dropdown-submenu {
 #product_preloader .spinner {
     position: fixed;
 }
+
+.login-page .form-check {
+ padding-left:0;
+}
