--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1107,6 +1107,8 @@ mark {
 
 .myniceselect.nice-select .list {
     width: 100%;
+    max-height: 25rem;
+    overflow-y: scroll;
 }
 
 .myniceselect.nice-select.wide span {
@@ -5047,7 +5049,7 @@ mark {
 
 .myaccount-content {
     border: 1px solid #e5e5e5;
-    padding: 30px;
+    padding: 30px 30px 70px;
 }
 
 @media (max-width: 575px) {
