--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1992,7 +1992,7 @@ mark {
 }
 
 .header-right-area.main-nav > ul > li.minicart-wrap {
-    margin-right: 30px;
+    margin-right: 20px;
 }
 
 .header-right-area.main-nav > ul > li.minicart-wrap .minicart-btn {
@@ -5006,7 +5006,7 @@ mark {
 /*    16 - Pages - My-Account
 /*----------------------------------------*/
 /*-------- Start My Account Page Wrapper --------*/
-.myaccount-tab-menu {
+.my-account-tab-menu {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -5014,7 +5014,7 @@ mark {
     flex-direction: column;
 }
 
-.myaccount-tab-menu a {
+.my-account-tab-menu a {
     border: 1px solid #dddddd;
     border-bottom: none;
     color: #000000;
@@ -5025,17 +5025,17 @@ mark {
     text-transform: uppercase;
 }
 
-.myaccount-tab-menu a:last-child {
+.my-account-tab-menu a:last-child {
     border-bottom: 1px solid #dddddd;
 }
 
-.myaccount-tab-menu a:hover, .myaccount-tab-menu a.active {
+.my-account-tab-menu a:hover, .my-account-tab-menu a.active {
     background-color: #4e7fad;
     border-color: #4e7fad;
     color: #ffffff;
 }
 
-.myaccount-tab-menu a i {
+.my-account-tab-menu a i {
     font-size: 14px;
     text-align: center;
     width: 25px;
@@ -5047,22 +5047,22 @@ mark {
     }
 }
 
-.myaccount-content {
+.my-account-content {
     border: 1px solid #e5e5e5;
     padding: 30px 30px 70px;
 }
 
 @media (max-width: 575px) {
-    .myaccount-content {
+    .my-account-content {
         padding: 20px 15px;
     }
 }
 
-.myaccount-content form {
+.my-account-content form {
     margin-top: -20px;
 }
 
-.myaccount-content form .single-input-item {
+.my-account-content form .single-input-item {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -5075,39 +5075,39 @@ mark {
     width: 100%;
 }
 
-.myaccount-content form .single-input-item input {
+.my-account-content form .single-input-item input {
     width: 100%;
     padding: 12px 10px;
     border: 1px solid #dddddd;
 }
 
-.myaccount-content form .single-input-item input:focus {
+.my-account-content form .single-input-item input:focus {
     border: 1px solid #4e7fad;
 }
 
-.myaccount-content form .single-item-button {
+.my-account-content form .single-item-button {
     width: 25%;
 }
 
 @media (max-width: 1199px) {
-    .myaccount-content form .single-item-button {
+    .my-account-content form .single-item-button {
         width: 30%;
     }
 }
 
 @media (max-width: 991px) {
-    .myaccount-content form .single-item-button {
+    .my-account-content form .single-item-button {
         width: 45%;
     }
 }
 
 @media (max-width: 767px) {
-    .myaccount-content form .single-item-button {
+    .my-account-content form .single-item-button {
         width: 100%;
     }
 }
 
-.myaccount-content h3 {
+.my-account-content h3 {
     font-size: 20px;
     border-bottom: 1px dashed #dddddd;
     padding-bottom: 10px;
@@ -5115,24 +5115,24 @@ mark {
     font-weight: 500;
 }
 
-.myaccount-content .welcome a {
+.my-account-content .welcome a {
     color: #000000;
 }
 
-.myaccount-content .welcome a:hover {
+.my-account-content .welcome a:hover {
     color: #4e7fad;
 }
 
-.myaccount-content .welcome strong {
+.my-account-content .welcome strong {
     font-weight: 600;
     color: #4e7fad;
 }
 
-.myaccount-content fieldset {
+.my-account-content fieldset {
     margin-top: 20px;
 }
 
-.myaccount-content fieldset legend {
+.my-account-content fieldset legend {
     color: #000000;
     font-size: 20px;
     margin-top: 20px;
@@ -5140,12 +5140,12 @@ mark {
     border-bottom: 1px dashed #dddddd;
 }
 
-.myaccount-table {
+.my-account-table {
     white-space: nowrap;
     font-size: 14px;
 }
 
-.myaccount-table table th, .myaccount-table .table th {
+.my-account-table table th, .my-account-table .table th {
     color: #000000;
     padding: 10px;
     font-weight: 500;
@@ -5154,7 +5154,7 @@ mark {
     border-bottom: 0;
 }
 
-.myaccount-table table td, .myaccount-table .table td {
+.my-account-table table td, .my-account-table .table td {
     padding: 10px;
     vertical-align: middle;
     border-color: #dddddd;
@@ -7711,4 +7711,7 @@ nav li:hover > .dropdown-submenu-v2, nav li:hover > .dropdown-submenu {
 }
 input:read-only {
     background-color: #e6e6e6;
+}
+.order-block-height {
+    min-height: 14rem;
 }
