--- a/public/css/style.css
+++ b/public/css/style.css
@@ -561,7 +561,7 @@ mark {
     background-color: #4e7fad;
     color: #ffffff;
     position: fixed;
-    right: 50px;
+    left: 50px;
     top: 0;
     width: 50px;
     height: 50px;
@@ -7631,8 +7631,8 @@ nav li:hover > .dropdown-submenu-v2, nav li:hover > .dropdown-submenu {
     z-index: 100000;
     position: fixed;
     display: inline-block;
-    bottom: 0;
-    left: 1rem;
+    bottom: 3rem;
+    right: 2rem;
     border-radius: 1rem;
 }
 
@@ -7753,4 +7753,29 @@ input:read-only {
 }
 .order-block-height {
     min-height: 14rem;
+}
+.extra-product-block .row{
+    max-height: 15rem;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
